# oi-funding-trading-terminal

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
crates/oi-api/: Cargo.toml  build.rs
crates/oi-api/examples/: subscribe.rs
crates/oi-api/src/: auth.rs  config.rs  grpc.rs  lib.rs  main.rs  metrics.rs  rest.rs  server.rs  sysmetrics.rs  ws.rs
crates/oi-api/tests/: auth_middleware.rs  e2e_pipeline.rs  tls_roundtrip.rs
crates/oi-collector/: Cargo.toml
crates/oi-collector/src/: aggregator.rs  backfill.rs  config.rs  funding_sweep.rs  lib.rs  live.rs  main.rs  metrics.rs  price_provider.rs  runner.rs  scheduler.rs
crates/oi-core/: Cargo.toml
crates/oi-core/src/: error.rs  exchange.rs  funding.rs  instrument.rs  lib.rs  price.rs  snapshot.rs  traits.rs  unit.rs
crates/oi-exchanges/: Cargo.toml
crates/oi-exchanges/src/: lib.rs
crates/oi-exchanges/src/aster/: mod.rs
crates/oi-exchanges/src/binance/: mod.rs  rest.rs  ws.rs
crates/oi-exchanges/src/bingx/: mod.rs
crates/oi-exchanges/src/bitget/: mod.rs  rest.rs  stream.rs  ws.rs
crates/oi-exchanges/src/bybit/: mod.rs  rest.rs  stream.rs  ws.rs
crates/oi-exchanges/src/common/: bucket.rs  http.rs  mod.rs  ws.rs
crates/oi-exchanges/src/gate/: mod.rs
crates/oi-exchanges/src/hyperliquid/: mod.rs  rest.rs  stream.rs  ws.rs
crates/oi-exchanges/src/kucoin/: mod.rs
crates/oi-exchanges/src/mexc/: mod.rs
crates/oi-exchanges/src/okx/: mod.rs  rest.rs  stream.rs  ws.rs
crates/oi-exchanges/tests/: aster_wiremock.rs  binance_wiremock.rs  bingx_wiremock.rs  bitget_wiremock.rs  bybit_wiremock.rs  hyperliquid_wiremock.rs  kucoin_wiremock.rs  mexc_wiremock.rs  okx_wiremock.rs
crates/oi-replication/: Cargo.toml
crates/oi-replication/src/: backup.rs  failover.rs  lib.rs
crates/oi-storage/: Cargo.toml
crates/oi-storage/src/: clickhouse.rs  composite.rs  leader_gated.rs  lib.rs  pubsub.rs  redis.rs  wal.rs
crates/oi-storage/tests/: clickhouse_roundtrip.rs
deploy/: Dockerfile  api.toml  collector.toml  docker-compose.replicated.yml  docker-compose.yml
deploy/backup/: config.yml
deploy/clickhouse/: keeper.xml  server-1.xml  server-2.xml
deploy/nginx/: nginx.conf
deploy/observability/: README.md  grafana-dashboard.json  prometheus-alerts.yml  prometheus.yml
deploy/tuning/: limits.conf  sysctl-high-concurrency.conf
docs/: adding-an-exchange.md  deployment-the-hosting.md  deployment.md  exchange-notes.md  replication.md  sizing.md  terminal-integration.md  testing.md
migrations/: 001_schema.sql  001_schema_replicated.sql
migrations/replicated/: 001_schema.sql
migrations/single/: 001_schema.sql
proto/: oi.proto
