[workspace]
resolver = "2"
members = [
    "crates/oi-core",
    "crates/oi-exchanges",
    "crates/oi-storage",
    "crates/oi-collector",
    "crates/oi-api",
    "crates/oi-replication",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
license = "MIT"
repository = "https://github.com/you/trading-terminal-oi"

[workspace.dependencies]
# async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-util = { version = "0.7", features = ["time"] }
futures = "0.3"
async-trait = "0.1"

# http / ws
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "http2"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
url = "2.5"

# serde / wire
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
rmp-serde = "1.3"

# grpc
tonic = { version = "0.12", features = ["tls", "gzip"] }
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"

# rest
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip"] }

# storage
clickhouse = { version = "0.13", features = ["rustls-tls", "lz4", "time"] }
redis = { version = "0.27", features = ["tokio-comp", "tokio-rustls-comp", "connection-manager"] }

# rate limit / resilience
governor = "0.7"
backon = "1.2"

# time / id / math
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
rust_decimal = { version = "1.36", features = ["serde-with-float"] }
rust_decimal_macros = "1.36"

# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tracing-appender = "0.2"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# config
config = { version = "0.14", default-features = false, features = ["toml", "yaml"] }
figment = { version = "0.10", features = ["toml", "env"] }
dotenvy = "0.15"
clap = { version = "4.5", features = ["derive", "env"] }

# misc
anyhow = "1"
thiserror = "2"
bytes = "1.7"
parking_lot = "0.12"
dashmap = "6"
once_cell = "1.20"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# test
mockito = "1.5"
wiremock = "0.6"
rstest = "0.23"
pretty_assertions = "1.4"
criterion = { version = "0.5", features = ["async_tokio"] }
testcontainers = "0.23"
crc32fast = "1.4"
rcgen = "0.13"

# internal
oi-core = { path = "crates/oi-core" }
oi-exchanges = { path = "crates/oi-exchanges" }
oi-storage = { path = "crates/oi-storage" }
oi-api = { path = "crates/oi-api" }
oi-replication = { path = "crates/oi-replication" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = 3

[profile.release-debug]
inherits = "release"
debug = 1
strip = "none"
