[package]
name = "oi-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "gRPC + REST API for serving OI to terminals."

[[bin]]
name = "oi-api"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
oi-core = { workspace = true }
oi-storage = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
axum = { workspace = true }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
rust_decimal = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
figment = { workspace = true }
bytes = { workspace = true }
tokio-stream = "0.1"
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
scopeguard = "1.2"

[dev-dependencies]
clap = { workspace = true }
oi-exchanges = { workspace = true }
testcontainers = { workspace = true }
wiremock = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
time = { workspace = true }
rcgen = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
protoc-bin-vendored = "3"
