[package]
name = "oi-replication"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Primary/backup failover, periodic backups, cross-node sync."

[lints]
workspace = true

[dependencies]
oi-core = { workspace = true }
oi-storage = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
redis = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
